// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L14 — Ternary 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $, __bfSlot, createDisposableEffect, escapeText, insert } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const [_s0] = $(__scope, 's0')

  insert(__scope, 's0', () => count() > 0, {
    template: () => { const __slots = []; return { html: \`<p bf-c="s0" bf="s2"><!--bf:s1-->\${__bfSlot(count(), __slots)}<!--/--> items</p>\`, slots: __slots } },
    bindEvents: (__branchScope, { isFirstRun: __bfFirstRun = false } = {}) => {
      const __disposers = []
      const __bfw_s1 = lazySlots(__branchScope, [{ id: 's1', kind: 'markup', path: [] }])
      __disposers.push(createDisposableEffect(() => { __bfw_s1('s1', escapeTextOrNode(count())) }))
      return () => __disposers.forEach(d => d())
    }
  }, {
    template: () => { const __slots = []; return { html: \`<p bf-c="s0">No items</p>\`, slots: __slots } },
    bindEvents: (__branchScope, { isFirstRun: __bfFirstRun = false } = {}) => {
    }
  })

}

hydrate('Example', { init: initExample, template: (_p) => \`<div bf="s3">\${(0) > 0 ? \`<p bf-c="s0" bf="s2"><!--bf:s1-->\${escapeText((0))}<!--/--> items</p>\` : \`<p bf-c="s0">No items</p>\`}</div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L17 — Logical AND 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $, $c, initChild, insert, renderChild } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const [_s0] = $(__scope, 's0')

  insert(__scope, 's0', () => isLoggedIn(), {
    template: () => { const __slots = []; return { html: \`<!--bf-cond-start:s0-->\${renderChild('Dashboard__b3c36eee', {}, undefined, 's1')}<!--bf-cond-end:s0-->\`, slots: __slots } },
    bindEvents: (__branchScope, { isFirstRun: __bfFirstRun = false } = {}) => {
      const [__c0] = $c(__branchScope, 's1')
      if (__c0) initChild('Dashboard__b3c36eee', __c0, {})
    }
  }, {
    template: () => { const __slots = []; return { html: \`<!--bf-cond-start:s0--><!--bf-cond-end:s0-->\`, slots: __slots } },
    bindEvents: (__branchScope, { isFirstRun: __bfFirstRun = false } = {}) => {
    }
  })

}

hydrate('Example', { init: initExample, template: (_p) => \`<div bf="s2">\${(false) ? \`<!--bf-cond-start:s0-->\${renderChild('Dashboard__b3c36eee', {}, undefined, 's1')}<!--bf-cond-end:s0-->\` : \`<!--bf-cond-start:s0--><!--bf-cond-end:s0-->\`}</div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L25 — (no label) 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $, initChild, mapArray, renderChild } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const [_s1] = $(__scope, 's1')

  mapArray(() => todos(), _s1, (todo) => String(todo.id), (todo, __idx, __existing) => {
    if (__existing) { initChild('TodoItem__b3c36eee', __existing, { get todo() { return todo() } }); return __existing }
    return createComponent('TodoItem__b3c36eee', { get todo() { return todo() } }, todo().id)
  }, 'l0')

}

hydrate('Example', { init: initExample, template: (_p) => \`<div bf="s1"><!--bf-loop:l0-->\${([]).map((todo) => \`\${renderChild('TodoItem__b3c36eee', {todo: todo}, todo.id, 's0', true)}\`).join('')}<!--bf-/loop:l0--></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L32 — Filter with a block-body predicate 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $, initChild, mapArray, renderChild } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const [_s1] = $(__scope, 's1')

  mapArray(() => todos().filter(t => {
  const f = filter()
  if (f === 'active') return !t.done
  if (f === 'completed') return t.done
  return true
}), _s1, (todo) => String(todo.id), (todo, __idx, __existing) => {
    if (__existing) { initChild('TodoItem__b3c36eee', __existing, { get todo() { return todo() } }); return __existing }
    return createComponent('TodoItem__b3c36eee', { get todo() { return todo() } }, todo().id)
  }, 'l0')

}

hydrate('Example', { init: initExample, template: (_p) => \`<div bf="s1"><!--bf-loop:l0-->\${([]).filter(t => {
  const f = ('all')
  if (f === 'active') return !t.done
  if (f === 'completed') return t.done
  return true
}).map((todo) => \`\${renderChild('TodoItem__b3c36eee', {todo: todo}, todo.id, 's0', true)}\`).join('')}<!--bf-/loop:l0--></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L42 — Sort by price, break ties by name 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $, initChild, mapArray, renderChild } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const [_s1] = $(__scope, 's1')

  mapArray(() => items().toSorted((a, b) => a.price - b.price || a.name.localeCompare(b.name)), _s1, (item) => String(item.id), (item, __idx, __existing) => {
    if (__existing) { initChild('Item__b3c36eee', __existing, { get item() { return item() } }); return __existing }
    return createComponent('Item__b3c36eee', { get item() { return item() } }, item().id)
  }, 'l0')

}

hydrate('Example', { init: initExample, template: (_p) => \`<div bf="s1"><!--bf-loop:l0-->\${([]).toSorted((a, b) => a.price - b.price || a.name.localeCompare(b.name)).map((item) => \`\${renderChild('Item__b3c36eee', {item: item}, item.id, 's0', true)}\`).join('')}<!--bf-/loop:l0--></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L50 — (no label) 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $ } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')
  const handleSubmit = () => {}

  const [_s0, _s1, _s2] = $(__scope, 's0', 's1', 's2')

  if (_s0) _s0.addEventListener('click', () => { setCount(n => n + 1) })
  if (_s1) _s1.addEventListener('input', (e) => { setText((e.target).value) })
  if (_s2) _s2.addEventListener('keydown', (e) => { e.key === 'Enter' && handleSubmit() })
}

hydrate('Example', { init: initExample, template: (_p) => \`<div><button bf="s0">+1</button><input bf="s1" /><input bf="s2" /></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L58 — (no label) 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $, escapeAttr, styleToCss } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const [_s0, _s1, _s2] = $(__scope, 's0', 's1', 's2')

  { const __l = []
  createEffect(() => {
    if (_s0) {
      { const __x = !accepted()
      if (!(0 in __l) || !Object.is(__l[0], __x)) {
        _s0.disabled = !!(__x)
      }
      __l[0] = __x }
    }
  }) }

  { const __l = []
  createEffect(() => {
    if (_s1) {
      { const __x = \`\${filter() === 'all' ? 'selected' : ''}\`
      if (!(0 in __l) || !Object.is(__l[0], __x)) {
        { const __v = __x; if (__v != null) _s1.setAttribute('class', String(__v)); else _s1.removeAttribute('class') }
      }
      __l[0] = __x }
    }
  }) }

  { const __l = []
  createEffect(() => {
    if (_s2) {
      { const __x = \`background: \${accepted() ? '#4caf50' : '#ccc'}\`
      if (!(0 in __l) || !Object.is(__l[0], __x)) {
        { const __v = styleToCss(__x); if (__v != null) _s2.setAttribute('style', __v); else _s2.removeAttribute('style') }
      }
      __l[0] = __x }
    }
  }) }

}

hydrate('Example', { init: initExample, template: (_p) => \`<div><button \${!(false) ? 'disabled' : ''} bf="s0">Submit</button><a \${(\`\${('all') === 'all' ? 'selected' : ''}\`) != null ? 'class="' + escapeAttr(\`\${('all') === 'all' ? 'selected' : ''}\`) + '"' : ''} bf="s1">All</a><div \${((v) => v != null ? 'style="' + escapeAttr(v) + '"' : '')(styleToCss(\`background: \${(false) ? '#4caf50' : '#ccc'}\`))} bf="s2">Status</div></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L68 — (no label) 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

}

hydrate('Example', { init: initExample, template: (_p) => \`<div><h1>Title</h1><p>Description</p></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L85 — ❌ BF101 on Go/Mojo; works on Hono 1`] = `
"import { $, createComponent, createEffect, escapeAttr, escapeText, hydrate, lazySlots, withParentScope } from '@barefootjs/client/runtime'


export function initReactionBar(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const entries = Object.entries(_p.reactions).filter(([, users]) => users.length > 0)

  const [_s2] = $(__scope, 's2')

  // Reactive texts / CSR materialize in static array children
  if (_s2) {
    entries.forEach(([emoji, users], __idx) => {
      let __iterEl = _s2.children[__idx]
      if (!__iterEl) {
        const __tpl = document.createElement('template')
        __tpl.innerHTML = withParentScope(__scopeId, () => \`<span data-key="\${escapeAttr(emoji)}"><!--bf:s0-->\${escapeText(emoji)}<!--/-->: <!--bf:s1-->\${escapeText(String(users.length))}<!--/--></span>\`)
        const __cloned = __tpl.content.firstElementChild
        if (__cloned) {
          const __anchor = _s2.children[__idx] ?? null
          _s2.insertBefore(__cloned, __anchor)
          __iterEl = __cloned
        }
      }
      if (__iterEl) {
        const __bfw_s0 = lazySlots(__iterEl, [{ id: 's0', kind: 'text', path: [] }, { id: 's1', kind: 'text', path: [] }])
        createEffect(() => { __bfw_s0('s0', String(emoji)) })
        createEffect(() => { __bfw_s0('s1', String(String(users.length))) })
      }
    })
  }

}

hydrate('ReactionBar__b3c36eee', { init: initReactionBar, template: (_p) => \`<div bf="s2"><!--bf-loop:l0-->\${[].map(([emoji, users]) => \`<span data-key="\${escapeAttr(emoji)}"><!--bf:s0-->\${escapeText(emoji)}<!--/-->: <!--bf:s1-->\${escapeText(String(users.length))}<!--/--></span>\`).join('')}<!--bf-/loop:l0--></div>\`, name: 'ReactionBar' })
export function ReactionBar(_p, __bfKey) { return createComponent('ReactionBar__b3c36eee', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L94 — ✅ Pass the array as a prop — keeps SSR 1`] = `
"import { $, createComponent, escapeAttr, escapeText, hydrate, lazySlots, mapArrayLazy, textOrNode } from '@barefootjs/client/runtime'


export function initReactionBarByProp(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [_s2] = $(__scope, 's2')

  const __tpl_l0 = document.createElement('template')
  __tpl_l0.innerHTML = \`<span data-key=""><!--bf:s0--><!--/-->: <!--bf:s1--><!--/--></span>\`
  const __lzp_l0 = [[0], [3]]
  const __lzs_l0 = [{ id: 's0', kind: 'text', path: [] }, { id: 's1', kind: 'text', path: [] }]
  const __lzsc_l0 = [{ id: 's0', kind: 'text', path: __lzp_l0[0] }, { id: 's1', kind: 'text', path: __lzp_l0[1] }]
  mapArrayLazy(() => (_p.entries ?? []), _s2, ([emoji, users]) => String(emoji), {
    createRow: (__e, __idx) => {
      const __bfItem = () => __e.item
      const __el = __tpl_l0.content.firstElementChild.cloneNode(true)
      const __r = __e.refs = [lazySlots(__el, __lzsc_l0)]
      const __l = __e.last = []
      { const __x = __bfItem()[0]
      __r[0]('s0', textOrNode(__x))
      __l[0] = __x }
      { const __x = String(__bfItem()[1].length)
      __r[0]('s1', textOrNode(__x))
      __l[1] = __x }
      return __el
    },
    applyItem: (__e) => {
      const __bfItem = () => __e.item
      const __r = __e.refs ?? (__e.refs = [])
      const __l = __e.last ?? (__e.last = [])
      const __d = __r[0] ?? (__r[0] = lazySlots(__e.primaryEl, __lzs_l0))
      { const __x = __bfItem()[0]
      if (!(0 in __l) || !Object.is(__l[0], __x)) __d('s0', textOrNode(__x))
      __l[0] = __x }
      { const __x = String(__bfItem()[1].length)
      if (!(1 in __l) || !Object.is(__l[1], __x)) __d('s1', textOrNode(__x))
      __l[1] = __x }
    },
  }, 'l0')

}

hydrate('ReactionBarByProp__b3c36eee', { init: initReactionBarByProp, template: (_p) => \`<div bf="s2"><!--bf-loop:l0-->\${_p.entries.map(([emoji, users]) => \`<span data-key="\${escapeAttr(emoji)}"><!--bf:s0-->\${escapeText(emoji)}<!--/-->: <!--bf:s1-->\${escapeText(String(users.length))}<!--/--></span>\`).join('')}<!--bf-/loop:l0--></div>\`, name: 'ReactionBarByProp' })
export function ReactionBarByProp(_p, __bfKey) { return createComponent('ReactionBarByProp__b3c36eee', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L104 — ❌ BF101 on Go/Mojo; works on Hono 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = items().filter(x => x.tags.some(t => t.active)).map(t => t.name)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Example', { init: initExample, template: (_p) => \`<div bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(([]).filter(x => x.tags.some(t => t.active)).map(t => t.name))}<!--/--></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/jsx-compatibility.md doc-examples L107 — ✅ Defer to the client — empty until hydration 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  // @client: s0
  { const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'text', path: [0], markerless: true }])
  createEffect(() => {
    __bfw_s0('s0', items().filter(x => x.tags.some(t => t.active)).map(t => t.name))
  }) }

}

hydrate('Example', { init: initExample, template: (_p) => \`<div bf="s1"></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/client-directive.md doc-examples L24 — (no label) 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  // @client: s0
  { const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'text', path: [0, 0], markerless: true }])
  createEffect(() => {
    __bfw_s0('s0', todos().filter(t => !t.done).length)
  }) }

}

hydrate('Example', { init: initExample, template: (_p) => \`<div><strong bf="s1"></strong></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/rendering/client-directive.md doc-examples L30 — (no label) 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = todos().filter(t => !t.done).length
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Example', { init: initExample, template: (_p) => \`<div><strong bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(([]).filter(t => !t.done).length)}<!--/--></strong></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/create-signal.md doc-examples L17 — (no label) 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(0)

  count()
  setCount(5)
  setCount(n => n + 1)

}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/create-signal.md doc-examples L31 — (no label) 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [todos, setTodos] = createSignal([{ text: 'Buy milk' }])

}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/create-signal.md doc-examples L34 — ❌ Mutating the same array — no update 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const list = todos()

  list.push({ text: 'Walk dog' })
  setTodos(list)

}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/create-signal.md doc-examples L39 — ✅ New array — triggers update 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  setTodos([...todos(), { text: 'Walk dog' }])

}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/create-effect.md doc-examples L17 — (no label) 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(0)

  setCount(1)

  createEffect(() => {
  document.title = \`Count: \${count()}\`
})
}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/create-effect.md doc-examples L31 — (no label) 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  createEffect(() => {
  const timer = setInterval(() => console.log('tick'), 1000)
  onCleanup(() => clearInterval(timer))
})
}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/create-effect.md doc-examples L40 — (no label) 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [query, setQuery] = createSignal('')

  createEffect(() => {
  const q = query()
  if (!q) return

  const controller = new AbortController()
  fetch(\`/api/search?q=\${q}\`, { signal: controller.signal })
    .then(r => r.json())
    .then(setResults)

  onCleanup(() => controller.abort())
})
}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/create-memo.md doc-examples L17 — (no label) 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [todos, setTodos] = createSignal([])
  const [filter, setFilter] = createSignal('all')
  const filteredTodos = createMemo(() => {
  const list = todos()
  switch (filter()) {
    case 'active': return list.filter(t => !t.done)
    case 'done':   return list.filter(t => t.done)
    default:       return list
  }
})

  createEffect(() => console.log(filteredTodos().length))
}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/on-mount.md doc-examples L17 — (no label) 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  onMount(() => {
  const onHashChange = () => setFilter(window.location.hash === '#/active' ? 'active' : 'all')
  window.addEventListener('hashchange', onHashChange)
  onCleanup(() => window.removeEventListener('hashchange', onHashChange))
})
}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/on-cleanup.md doc-examples L17 — (no label) 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  createEffect(() => {
  const timer = setInterval(() => console.log('tick'), 1000)
  onCleanup(() => clearInterval(timer))
})
}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/untrack.md doc-examples L17 — (no label) 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(0)
  const [name, setName] = createSignal('Alice')

  setCount(1)
  setName('Bob')

  createEffect(() => {
  console.log('count:', count())              // tracked
  console.log('name:', untrack(() => name())) // not tracked
})
}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/batch.md doc-examples L19 — (no label) 1`] = `
"import { createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [x, setX] = createSignal(40)
  const [y, setY] = createSignal(60)

  setX(70)
  setY(30)

  createEffect(() => send({ x: x(), y: y() }))
}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/batch.md doc-examples L30 — (no label) 1`] = `
"import { batch, createComponent, createEffect, createMemo, createSignal, hydrate, onCleanup, onMount, untrack } from '@barefootjs/client/runtime'


export function initStatementExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  batch(() => {
    setX(70)
    setY(30)
  })

}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/reactivity/props-reactivity.md doc-examples L11 — (no label) 1`] = `
"import { createComponent, createEffect, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initDisplay(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = _p.value
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  createEffect(() => {
    console.log(_p.value) // re-runs when the parent updates value
  })
}

hydrate('Display', { init: initDisplay, template: (_p) => \`<span bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(_p.value)}<!--/--></span>\` })
export function Display(_p, __bfKey) { return createComponent('Display', _p, __bfKey) }"
`;

exports[`docs/core/components/component-authoring.md doc-examples L16 — (no label) 1`] = `
"import { createComponent, createEffect, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initGreeting(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = _p.name
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Greeting', { init: initGreeting, template: (_p) => \`<h1 bf="s1">Hello, <!--bf:s0-->\${escapeTextOrMarkup(_p.name)}<!--/--></h1>\` })
export function Greeting(_p, __bfKey) { return createComponent('Greeting', _p, __bfKey) }"
`;

exports[`docs/core/components/component-authoring.md doc-examples L27 — (no label) 1`] = `
"import { $, createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initCounter(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(0)

  const [_s1] = $(__scope, 's1')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = count()
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  if (_s1) _s1.addEventListener('click', () => { setCount(n => n + 1) })
}

hydrate('Counter', { init: initCounter, template: (_p) => \`<button bf="s1"> Count: <!--bf:s0-->\${escapeTextOrMarkup((0))}<!--/--></button>\` })
export function Counter(_p, __bfKey) { return createComponent('Counter', _p, __bfKey) }"
`;

exports[`docs/core/components/component-authoring.md doc-examples L82 — (no label) 1`] = `
"import { createComponent, createEffect, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initGreeting(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = _p.greeting ?? 'Hello'
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  const __bfw_s1 = lazySlots(__scope, [{ id: 's1', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = _p.name
    __bfw_s1('s1', escapeTextOrNode(__val))
  })

}

hydrate('Greeting', { init: initGreeting, template: (_p) => \`<h1 bf="s2"><!--bf:s0-->\${escapeTextOrMarkup(_p.greeting ?? 'Hello')}<!--/-->, <!--bf:s1-->\${escapeTextOrMarkup(_p.name)}<!--/--></h1>\` })
export function Greeting(_p, __bfKey) { return createComponent('Greeting', _p, __bfKey) }"
`;

exports[`docs/core/components/component-authoring.md doc-examples L95 — (no label) 1`] = `
"import { createComponent, hydrate } from '@barefootjs/client/runtime'

function initStatementExample() {}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/components/component-authoring.md doc-examples L102 — (no label) 1`] = `
"import { $, createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initCounter(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(_p.initial ?? 0)
  createEffect(() => {
    const __val = (_p.initial ?? 0)
    if (__val !== undefined) setCount(__val)
  })

  const [_s1] = $(__scope, 's1')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = count()
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  if (_s1) _s1.addEventListener('click', () => { setCount(n => n + 1) })
}

hydrate('Counter', { init: initCounter, template: (_p) => \`<button bf="s1"><!--bf:s0-->\${escapeTextOrMarkup((_p.initial))}<!--/--></button>\` })
export function Counter(_p, __bfKey) { return createComponent('Counter', _p, __bfKey) }"
`;

exports[`docs/core/components/component-authoring.md doc-examples L114 — (no label) 1`] = `
"import { $, applyRestAttrs, createComponent, createEffect, escapeAttr, hydrate, markupOrEmpty } from '@barefootjs/client/runtime'


export function initButton(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const classes = \`btn btn-\${(_p.variant ?? 'default')} \${_p.className ?? ''}\`

  const [_s0] = $(__scope, 's0')

  { const __l = []
  createEffect(() => {
    if (_s0) {
      { const __x = classes
      if (!(0 in __l) || !Object.is(__l[0], __x)) {
        { const __v = __x; if (__v != null) _s0.setAttribute('class', String(__v)); else _s0.removeAttribute('class') }
      }
      __l[0] = __x }
    }
  }) }

  if (_s0) applyRestAttrs(_s0, _p, ["class"])

}

hydrate('Button__b3c36eee', { init: initButton, template: (_p) => \`<button \${((\`btn btn-\${(_p.variant ?? 'default')} \${_p.className ?? ''}\`)) != null ? 'class="' + escapeAttr((\`btn btn-\${(_p.variant ?? 'default')} \${_p.className ?? ''}\`)) + '"' : ''} bf="s0">\${markupOrEmpty(_p.children)}</button>\`, name: 'Button' })
export function Button(_p, __bfKey) { return createComponent('Button__b3c36eee', _p, __bfKey) }"
`;

exports[`docs/core/components/component-authoring.md doc-examples L134 — (no label) 1`] = `
"import { $, createComponent, createEffect, hydrate } from '@barefootjs/client/runtime'


export function initAutoFocus(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const handleMount = (el) => {
    el.focus()
  }

  const [_s0] = $(__scope, 's0')

  if (_s0) (handleMount)(_s0)
}

hydrate('AutoFocus', { init: initAutoFocus, template: (_p) => \`<input placeholder="Focused on mount" bf="s0" />\` })
export function AutoFocus(_p, __bfKey) { return createComponent('AutoFocus', _p, __bfKey) }"
`;

exports[`docs/core/components/component-authoring.md doc-examples L149 — (no label) 1`] = `
"import { createComponent, hydrate } from '@barefootjs/client/runtime'

function initStatementExample() {}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/components/children-slots.md doc-examples L11 — (no label) 1`] = `
"import { createComponent, hydrate } from '@barefootjs/client/runtime'

function initStatementExample() {}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/components/children-slots.md doc-examples L22 — (no label) 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $c, initChild, renderChild } from '@barefootjs/client/runtime'
import '/* @bf-child:Card */'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const [_s0] = $c(__scope, 's0')


  // Initialize child components with props
  initChild('Card', _s0, { title: "Status" })
}

hydrate('Example', { init: initExample, template: (_p) => \`<div>\${renderChild('Card', {title: "Status", children: \`<p>All systems go</p>\`}, undefined, 's0')}</div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/components/children-slots.md doc-examples L36 — Input 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $c, initChild, renderChild } from '@barefootjs/client/runtime'
import '/* @bf-child:Slot */'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const [_s0] = $c(__scope, 's0')


  // Initialize child components with props
  initChild('Slot', _s0, { className: "btn", onClick: handleClick })
}

hydrate('Example', { init: initExample, template: (_p) => \`<div>\${renderChild('Slot', {className: "btn", children: \`<a href="/home">Home</a>\`}, undefined, 's0')}</div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/components/children-slots.md doc-examples L41 — Output 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $ } from '@barefootjs/client/runtime'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const [_s0] = $(__scope, 's0')

  if (_s0) _s0.addEventListener('click', handleClick)
}

hydrate('Example', { init: initExample, template: (_p) => \`<div><a href="/home" class="btn" bf="s0">Home</a></div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/components/children-slots.md doc-examples L60 — (no label) 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, $c, initChild, renderChild } from '@barefootjs/client/runtime'
import '/* @bf-child:Button */'

export function initTodoItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.todo)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('TodoItem__b3c36eee', { init: initTodoItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.todo))}<!--/--></li>\`, name: 'TodoItem' })
export function TodoItem(_p, __bfKey) { return createComponent('TodoItem__b3c36eee', _p, __bfKey) }
export function initItem(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = String(_p.item)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

}

hydrate('Item__b3c36eee', { init: initItem, template: (_p) => \`<li bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(String(_p.item))}<!--/--></li>\`, name: 'Item' })
export function Item(_p, __bfKey) { return createComponent('Item__b3c36eee', _p, __bfKey) }
function initDashboard() {}

hydrate('Dashboard__b3c36eee', { init: initDashboard, template: (_p) => \`<div>D</div>\`, name: 'Dashboard' })
export function Dashboard(_p, __bfKey) { return createComponent('Dashboard__b3c36eee', _p, __bfKey) }
export function initExample(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')
  const [count, setCount] = createSignal(0)
  const [isLoggedIn] = createSignal(false)
  const [todos] = createSignal([])
  const [items] = createSignal([])
  const [filter] = createSignal('all')
  const [accepted] = createSignal(false)
  const [text, setText] = createSignal('')

  const [_s0] = $c(__scope, 's0')


  // Initialize child components with props
  initChild('Button', _s0, { asChild: true })
}

hydrate('Example', { init: initExample, template: (_p) => \`<div>\${renderChild('Button', {asChild: true, children: \`<a href="/dashboard">Go to Dashboard</a>\`}, undefined, 's0')}</div>\` })
export function Example(_p, __bfKey) { return createComponent('Example', _p, __bfKey) }"
`;

exports[`docs/core/components/context-api.md doc-examples L30 — (no label) 1`] = `
"import { createComponent, createContext, createEffect, createSignal, hydrate, markupOrEmpty, provideContext, useContext, $ } from '@barefootjs/client/runtime'

var AccordionContext = AccordionContext ?? createContext()

export function initAccordion(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [activeItem, setActiveItem] = createSignal(null)
  const toggle = (id) => setActiveItem(prev => (prev === id ? null : id))


  // Provide context for child components
  provideContext(AccordionContext, { activeItem, toggle })
}

hydrate('Accordion', { init: initAccordion, template: (_p) => \`<div data-slot="accordion">\${markupOrEmpty(_p.children)}</div>\` })
export function Accordion(_p, __bfKey) { return createComponent('Accordion', _p, __bfKey) }
var AccordionContext = AccordionContext ?? createContext()

export function initAccordionTrigger(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const handleMount = (el) => {
    const ctx = useContext(AccordionContext)

    el.addEventListener('click', () => ctx.toggle(_p.itemId))

    createEffect(() => {
      el.setAttribute('aria-expanded', String(ctx.activeItem() === _p.itemId))
    })
  }

  const [_s0] = $(__scope, 's0')

  if (_s0) (handleMount)(_s0)
}

hydrate('AccordionTrigger', { init: initAccordionTrigger, template: (_p) => \`<button aria-expanded="false" bf="s0">\${markupOrEmpty(_p.children)}</button>\` })
export function AccordionTrigger(_p, __bfKey) { return createComponent('AccordionTrigger', _p, __bfKey) }
var AccordionContext = AccordionContext ?? createContext()

export function initAccordionContent(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const handleMount = (el) => {
    const ctx = useContext(AccordionContext)

    createEffect(() => {
      el.hidden = ctx.activeItem() !== _p.itemId
    })
  }

  const [_s0] = $(__scope, 's0')

  if (_s0) (handleMount)(_s0)
}

hydrate('AccordionContent', { init: initAccordionContent, template: (_p) => \`<div bf="s0">\${markupOrEmpty(_p.children)}</div>\` })
export function AccordionContent(_p, __bfKey) { return createComponent('AccordionContent', _p, __bfKey) }"
`;

exports[`docs/core/components/context-api.md doc-examples L98 — (no label) 1`] = `
"import { createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots, onCleanup, onMount } from '@barefootjs/client/runtime'


export function initElapsed(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [elapsedMs, setElapsedMs] = createSignal(0)

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = Math.floor(elapsedMs() / 1000)
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  onMount(() => {
    const onTimeUpdate = (e) => setElapsedMs((e).detail.elapsedMs)
    document.addEventListener('playback:timeupdate', onTimeUpdate)
    onCleanup(() => document.removeEventListener('playback:timeupdate', onTimeUpdate))
  })
}

hydrate('Elapsed', { init: initElapsed, template: (_p) => \`<span bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(Math.floor((0) / 1000))}<!--/-->s</span>\` })
export function Elapsed(_p, __bfKey) { return createComponent('Elapsed', _p, __bfKey) }"
`;

exports[`docs/core/components/portals.md doc-examples L28 — (no label) 1`] = `
"import { $, createComponent, createEffect, createPortal, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, isSSRPortal, lazySlots, markupOrEmpty } from '@barefootjs/client/runtime'


export function initTooltip(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [visible, setVisible] = createSignal(false)
  const handleMount = (el) => {
    if (el.parentNode !== document.body && !isSSRPortal(el)) {
      const ownerScope = el.closest('[bf-s]') ?? undefined
      createPortal(el, document.body, { ownerScope })
    }

    createEffect(() => {
      el.hidden = !visible()
    })
  }

  const [_s0, _s2] = $(__scope, 's0', 's2')

  const __bfw_s1 = lazySlots(__scope, [{ id: 's1', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = _p.text
    __bfw_s1('s1', escapeTextOrNode(__val))
  })

  if (_s0) _s0.addEventListener('mouseenter', () => { setVisible(true) })
  if (_s0) _s0.addEventListener('mouseleave', () => { setVisible(false) })
  if (_s2) (handleMount)(_s2)
}

hydrate('Tooltip', { init: initTooltip, template: (_p) => \`<div><span bf="s0">\${markupOrEmpty(_p.children)}</span><div class="tooltip" bf="s2"><!--bf:s1-->\${escapeTextOrMarkup(_p.text)}<!--/--></div></div>\` })
export function Tooltip(_p, __bfKey) { return createComponent('Tooltip', _p, __bfKey) }"
`;

exports[`docs/core/components/styling.md doc-examples L20 — Source 1`] = `
"import { createComponent, hydrate } from '@barefootjs/client/runtime'

function initStatementExample() {}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/components/styling.md doc-examples L23 — Compiled (cssLayerPrefix: 'components') 1`] = `
"import { createComponent, hydrate } from '@barefootjs/client/runtime'

function initStatementExample() {}

hydrate('StatementExample', { init: initStatementExample, template: (_p) => \`<div></div>\` })
export function StatementExample(_p, __bfKey) { return createComponent('StatementExample', _p, __bfKey) }"
`;

exports[`docs/core/how-it-works.mdx doc-examples L26 — (no label) 1`] = `
"import { $, createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initCounter(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(0)

  const [_s1] = $(__scope, 's1')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = count()
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  if (_s1) _s1.addEventListener('click', () => { setCount(n => n + 1) })
}

hydrate('Counter', { init: initCounter, template: (_p) => \`<button bf="s1"> Count: <!--bf:s0-->\${escapeTextOrMarkup((0))}<!--/--></button>\` })
export function Counter(_p, __bfKey) { return createComponent('Counter', _p, __bfKey) }"
`;

exports[`docs/core/adapters/hono-adapter.md doc-examples L57 — (no label) 1`] = `
"import { $, createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initCounter(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(_p.initial ?? 0)
  createEffect(() => {
    const __val = _p.initial
    if (__val !== undefined) setCount(__val)
  })

  const [_s2] = $(__scope, 's2')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = count()
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  if (_s2) _s2.addEventListener('click', () => { setCount(n => n + 1) })
}

hydrate('Counter', { init: initCounter, template: (_p) => \`<div><span bf="s1">Count: <!--bf:s0-->\${escapeTextOrMarkup((_p.initial ?? 0))}<!--/--></span><button bf="s2">+1</button></div>\` })
export function Counter(_p, __bfKey) { return createComponent('Counter', _p, __bfKey) }"
`;

exports[`docs/core/adapters/hono-adapter.md doc-examples L96 — (no label) 1`] = `
"import { $c, createComponent, hydrate, initChild, markupOrEmpty, renderChild } from '@barefootjs/client/runtime'
import '/* @bf-child:BfScripts */'


export function initLayout(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [_s0] = $c(__scope, 's0')


  // Initialize child components with props
  initChild('BfScripts', _s0, {})
}

hydrate('Layout', { init: initLayout, template: (_p) => \`<html><body>\${markupOrEmpty(_p.children)}\${renderChild('BfScripts', {}, undefined, 's0')}</body></html>\` })
export function Layout(_p, __bfKey) { return createComponent('Layout', _p, __bfKey) }"
`;

exports[`docs/core/adapters/go-template-adapter.md doc-examples L71 — (no label) 1`] = `
"import { $, createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initCounter(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(_p.initial ?? 0)
  createEffect(() => {
    const __val = _p.initial
    if (__val !== undefined) setCount(__val)
  })

  const [_s2] = $(__scope, 's2')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = count()
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  if (_s2) _s2.addEventListener('click', () => { setCount(n => n + 1) })
}

hydrate('Counter', { init: initCounter, template: (_p) => \`<div><span bf="s1">Count: <!--bf:s0-->\${escapeTextOrMarkup((_p.initial ?? 0))}<!--/--></span><button bf="s2">+1</button></div>\` })
export function Counter(_p, __bfKey) { return createComponent('Counter', _p, __bfKey) }"
`;

exports[`docs/core/adapters/custom-adapter.md doc-examples L45 — (no label) 1`] = `
"import { $, createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initCounter(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(_p.initial ?? 0)
  createEffect(() => {
    const __val = (_p.initial ?? 0)
    if (__val !== undefined) setCount(__val)
  })

  const [_s2] = $(__scope, 's2')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = count()
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  if (_s2) _s2.addEventListener('click', () => { setCount(n => n + 1) })
}

hydrate('Counter', { init: initCounter, template: (_p) => \`<div><p bf="s1"><!--bf:s0-->\${escapeTextOrMarkup((_p.initial))}<!--/--></p><button bf="s2">+1</button></div>\` })
export function Counter(_p, __bfKey) { return createComponent('Counter', _p, __bfKey) }"
`;

exports[`docs/core/reactivity.md doc-examples L18 — (no label) 1`] = `
"import { $, createComponent, createEffect, createMemo, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initCounter(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(0)
  const doubled = createMemo(() => count() * 2)

  const [_s3] = $(__scope, 's3')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = count()
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  const __bfw_s1 = lazySlots(__scope, [{ id: 's1', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = doubled()
    __bfw_s1('s1', escapeTextOrNode(__val))
  })

  if (_s3) _s3.addEventListener('click', () => { setCount(n => n + 1) })
}

hydrate('Counter', { init: initCounter, template: (_p) => \`<div><p bf="s2"><!--bf:s0-->\${escapeTextOrMarkup((0))}<!--/--> doubled is <!--bf:s1-->\${escapeTextOrMarkup(((0) * 2))}<!--/--></p><button bf="s3">+1</button></div>\` })
export function Counter(_p, __bfKey) { return createComponent('Counter', _p, __bfKey) }"
`;

exports[`docs/core/introduction.mdx doc-examples L13 — (no label) 1`] = `
"import { $, createComponent, createEffect, createSignal, escapeTextOrMarkup, escapeTextOrNode, hydrate, lazySlots } from '@barefootjs/client/runtime'


export function initCounter(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [count, setCount] = createSignal(0)

  const [_s1] = $(__scope, 's1')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = count()
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  if (_s1) _s1.addEventListener('click', () => { setCount(n => n + 1) })
}

hydrate('Counter', { init: initCounter, template: (_p) => \`<button bf="s1"> Count: <!--bf:s0-->\${escapeTextOrMarkup((0))}<!--/--></button>\` })
export function Counter(_p, __bfKey) { return createComponent('Counter', _p, __bfKey) }"
`;

exports[`docs/core/introduction.mdx doc-examples L72 — (no label) 1`] = `
"import { $, $c, createComponent, createEffect, escapeAttr, escapeTextOrMarkup, escapeTextOrNode, hydrate, initChild, lazySlots, renderChild } from '@barefootjs/client/runtime'
import '/* @bf-child:ReviewStars */'
import '/* @bf-child:AddToCart */'


export function initProductPage(__scope, _p = {}) {
  if (!__scope) return
  const __scopeId = __scope.getAttribute('bf-s')

  const [_s4] = $(__scope, 's4')
  const [_s5, _s6] = $c(__scope, 's5', 's6')

  const __bfw_s0 = lazySlots(__scope, [{ id: 's0', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = (_p.product ?? {}).name
    __bfw_s0('s0', escapeTextOrNode(__val))
  })

  const __bfw_s2 = lazySlots(__scope, [{ id: 's2', kind: 'markup', path: [] }])
  createEffect(() => {
    const __val = (_p.product ?? {}).description
    __bfw_s2('s2', escapeTextOrNode(__val))
  })

  { const __l = []
  createEffect(() => {
    if (_s4) {
      { const __x = _p.product.image
      if (!(0 in __l) || !Object.is(__l[0], __x)) {
        { const __v = __x; if (__v != null) _s4.setAttribute('src', String(__v)); else _s4.removeAttribute('src') }
      }
      __l[0] = __x }
    }
  }) }


  // Reactive child component props
  { const __l = []; const __m = []
  createEffect(() => {
    const [__ReviewStars_s5El] = $c(__scope, 's5')
    if (__ReviewStars_s5El) {
      { const __x = (_p.product ?? {}).rating
      if (!(0 in __l) || !Object.is(__l[0], __x)) {
        if (__m[0] ??= __ReviewStars_s5El.hasAttribute('rating')) { const __v = __x; if (__v != null) __ReviewStars_s5El.setAttribute('rating', String(__v)); else __ReviewStars_s5El.removeAttribute('rating') }
      }
      __l[0] = __x }
    }
    const [__AddToCart_s6El] = $c(__scope, 's6')
    if (__AddToCart_s6El) {
      { const __x = (_p.product ?? {}).id
      if (!(1 in __l) || !Object.is(__l[1], __x)) {
        if (__m[1] ??= __AddToCart_s6El.hasAttribute('productId')) { const __v = __x; if (__v != null) __AddToCart_s6El.setAttribute('productId', String(__v)); else __AddToCart_s6El.removeAttribute('productId') }
      }
      __l[1] = __x }
    }
  }) }

  // Initialize child components with props
  initChild('ReviewStars', _s5, { get rating() { return (_p.product ?? {}).rating } })
  initChild('AddToCart', _s6, { get productId() { return (_p.product ?? {}).id } })
}

hydrate('ProductPage', { init: initProductPage, template: (_p) => \`<div><h1 bf="s1"><!--bf:s0-->\${escapeTextOrMarkup(_p.product.name)}<!--/--></h1><p bf="s3"><!--bf:s2-->\${escapeTextOrMarkup(_p.product.description)}<!--/--></p><img \${(_p.product.image) != null ? 'src="' + escapeAttr(_p.product.image) + '"' : ''} bf="s4" />\${renderChild('ReviewStars', {rating: _p.product.rating}, undefined, 's5')}\${renderChild('AddToCart', {productId: _p.product.id}, undefined, 's6')}</div>\` })
export function ProductPage(_p, __bfKey) { return createComponent('ProductPage', _p, __bfKey) }"
`;
